# cookiecutter-autobahn-cpp

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.service_name}}/: CMakeLists.txt  Dockerfile  Makefile  README.md  _Makefile  _README.md  docker-compose-{{cookiecutter.service_name}}.yml  service.json
{{cookiecutter.service_name}}/app/: SConstruct  build  client.cpp
